--- a/chub/frontent/html/Q8.html
+++ b/chub/frontent/html/Q8.html
@@ -27,13 +27,21 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                    Two kids are liars, three can only say the truth. Jane: "Julia is only a liar, if John is telling
-                    the
-                    truth." Julia: "If Joey doesn't lie, then either Jane or John do." Joey: "Jack lies, as does Jane of
-                    Julia." John: "If Julia is telling the truth, then Jane or Joey do as well." Jack: "If you round up
-                    Jane, Joeyand John, you will have at least one liar." The compulsive liars are?
-
-                </div>
+                    Consider a row of 12 coins each having a value written on it. You play a game against an opponent by alternating turns. In each turn, a player selects either the first or last coin from the row, removes it from the row permanently, and receives the value of the coin. Determine the maximum possible amount of money we can definitely win. Because you have qualified technothlon you are given the chance to move first. 
+                    <br>
+                    Note: The opponent is as clever as you
+                    <br> 
+                    <br>
+                    <span style="padding-left: 5%;padding-right: 5%;">8</span>
+                    <span style="padding-left: 5%;padding-right: 5%;">15</span>
+                    <span style="padding-left: 5%;padding-right: 5%;">3</span>
+                    <span style="padding-left: 5%;padding-right: 5%;">7</span>
+                    <span style="padding-left: 5%;padding-right: 5%;">6</span>
+                    <span style="padding-left: 5%;padding-right: 5%;">8</span>
+                    <span style="padding-left: 5%;padding-right: 5%;">7</span>
+                    <span style="padding-left: 5%;padding-right: 5%;">5</span>
+                    </div>
+                    <br>
             </div>
             <div>
                 <div class="margin">
