--- a/chub/frontent/html/Q10.html
+++ b/chub/frontent/html/Q10.html
@@ -20,19 +20,26 @@
             <img src="..\images\Technothlon white.svg" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            ROUND 2
+            ROUND 1
             <hr>
         </div>
         <div class="flex direction content">
             <div class="flex direction">
 
-                <div class="size3  ">
-                   <p><a onclick="window.location.replace('index4.html')"> In a game, there are 2 teams   <a onclick="window.location.replace('index.html')"> A</a> & <a onclick="window.location.replace('index1.html')"> B</a> and 21 flags. They take turns removing the flags(A goes first). Each team must remove 1, 2, or 3 flags on a turn. The team that removes the last flag wins. Which team will always win?</a> </p> 
-
+                <div class="size3  " style="font-size: xxx-large">
+                    A snail is trying to climb a wall 40 ft tall. It climbs 4ft every hour and drops down 2 ft in the same hour. How much time will it take to climb up the wall for the snail. 
                 </div>
             </div>
-            <div >
-             <!-- <img src="\css\Frame.png" class="img2" alt=""> -->
+            <div>
+                <div class="margin">
+                    <label for="Answer">Answer</label>
+                    <input type="text" name="Answer">
+                </div>
+
+                <div>
+                    <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    <button class="button button5"><a onclick="window.location.replace('index4.html')"> Hint</a> </button>
+                </div>
             </div>
         </div>
     </div>
@@ -42,18 +49,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
