--- a/chub/frontent/html/Q6.html
+++ b/chub/frontent/html/Q6.html
@@ -27,12 +27,19 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                    Two kids are liars, three can only say the truth. Jane: "Julia is only a liar, if John is telling
-                    the
-                    truth." Julia: "If Joey doesn't lie, then either Jane or John do." Joey: "Jack lies, as does Jane of
-                    Julia." John: "If Julia is telling the truth, then Jane or Joey do as well." Jack: "If you round up
-                    Jane, Joeyand John, you will have at least one liar." The compulsive liars are?
-
+                    A thief wants to loot houses. He knows the amount of money in each house. He cannot loot two consecutive houses. There are 8 houses with the following money
+                    <br> 
+                    <br>
+                    <span style="padding-left: 4%;padding-right: 5%;">5</span>
+                    <span style="padding-left: 4%;padding-right: 5%;">5</span>
+                    <span style="padding-left: 4%;padding-right: 5%;">10</span>
+                    <span style="padding-left: 4%;padding-right: 5%;">50</span>
+                    <span style="padding-left: 4%;padding-right: 5%;">100</span>
+                    <span style="padding-left: 4%;padding-right: 5%;">25</span>
+                    <span style="padding-left: 4%;padding-right: 5%;">10</span>
+                    <span style="padding-left: 4%;padding-right: 5%;">5</span>
+                    <br><br>
+                    Find the maximum amount of money he can loot.
                 </div>
             </div>
             <div>
