--- a/chub/frontent/html/Q7.html
+++ b/chub/frontent/html/Q7.html
@@ -27,11 +27,24 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                    Two kids are liars, three can only say the truth. Jane: "Julia is only a liar, if John is telling
-                    the
-                    truth." Julia: "If Joey doesn't lie, then either Jane or John do." Joey: "Jack lies, as does Jane of
-                    Julia." John: "If Julia is telling the truth, then Jane or Joey do as well." Jack: "If you round up
-                    Jane, Joeyand John, you will have at least one liar." The compulsive liars are?
+                    An integer matrix of size (4 x 4) has been given. Find out the minimum cost to reach from the cell (1, 1) to (4, 4). 
+                    From a cell (i, j), you can move in three directions: 
+                    <ul>
+                        <li>((i + 1), j) which is, "down" </li>
+                        <li>(i, (j + 1)) which is, "to the right" </li>
+                        <li>((i+1), (j+1)) which is, "to the diagonal" </li>
+                    </ul>
+                    The cost of a path is defined as the sum of each cell's values through which the route passes. 
+                    <center>
+                        <div style="font-size:130%;">
+                            1 7 9 2 <br>
+                            8 6 3 2 <br>
+                            1 6 7 8 <br>
+                            2 9 8 2 <br>
+                            <br><br>
+                        </div>
+                    </center>
+                    
 
                 </div>
             </div>
