--- a/chub/frontent/html/index.html
+++ b/chub/frontent/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECHNOTHLON</title>
-    <link rel="stylesheet" href="\css\style.css">
+    <link rel="stylesheet" href="..\css\style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=DynaPuff&family=Open+Sans&display=swap"
@@ -19,7 +19,7 @@
     <div class="FLEX main">
         <div class="FLEX2 size">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="\images\Technothlon white.svg" alt="">
+            <img src="..\images\Technothlon white.svg" alt="">
         </div>
         <div class="flex1 ">
             <div class="left_techno border center">
