--- a/chub/frontent/html/Q3.html
+++ b/chub/frontent/html/Q3.html
@@ -20,24 +20,30 @@
             <img src="..\images\Technothlon white.svg" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            ROUND 2
+            ROUND 3
             <hr>
         </div>
         <div class="flex direction content">
             <div class="flex direction">
 
                 <div class="size3  ">
-                   <p><a onclick="window.location.replace('index4.html')"> In a game, there are 2 teams   <a onclick="window.location.replace('index.html')"> A</a> & <a onclick="window.location.replace('index1.html')"> B</a> and 21 flags. They take turns removing the flags(A goes first). Each team must remove 1, 2, or 3 flags on a turn. The team that removes the last flag wins. Which team will always win?</a> </p> 
+                    A and B are playing a new game today. They form a tower of 15 coins and make a move in alternate turns. Beerus plays first. In one step, the player can remove either 1, 2, or 4 coins from the tower. The person to make the last move wins the game. Can you find out who wins the game? A starts the game. 
 
                 </div>
             </div>
-            <div >
-             <!-- <img src="\css\Frame.png" class="img2" alt=""> -->
+            <!-- Answer  -  B   -->
+            <div>
+                <div class="margin">
+                    <label for="Answer">Answer</label>
+                    <input type="text" name="Answer">
+                </div>
+
+                <div>
+                    <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    <button class="button button5"><a onclick="window.location.replace('index4.html')"> Hint</a> </button>
+                </div>
             </div>
         </div>
-
-
-
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
@@ -45,18 +51,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
