--- a/chub/frontent/html/Q15.html
+++ b/chub/frontent/html/Q15.html
@@ -23,30 +23,11 @@
             ROUND 1
             <hr>
         </div>
-        <br>
         <div class="flex direction content">
             <div class="flex direction">
 
-                <div class="size3  ">
-                    An integer matrix of size (4 x 4) has been given. Find out the minimum cost to reach from the cell (1, 1) to (4, 4). 
-                    From a cell (i, j), you can move in three directions: 
-                    <ul>
-                        <li>((i + 1), j) which is, "down" </li>
-                        <li>(i, (j + 1)) which is, "to the right" </li>
-                        <li>((i+1), (j+1)) which is, "to the diagonal" </li>
-                    </ul>
-                    The cost of a path is defined as the sum of each cell's values through which the route passes. 
-                    <center>
-                        <div style="font-size:150%;">
-                            1 7 9 2 <br>
-                            8 6 3 2 <br>
-                            1 6 7 8 <br>
-                            2 9 8 2 <br>
-                            <br><br>
-                        </div>
-                    </center>
-                    
-
+                <div class="size3  " style="font-size: xxx-large">
+                    I have cities, but no houses. I have mountains, but no trees. I have water, but no fish. What am I? 
                 </div>
             </div>
             <div>
