--- a/chub/frontent/html/Q3.html
+++ b/chub/frontent/html/Q3.html
@@ -19,8 +19,9 @@
             <!-- TECHNOTHLON 2K22 -->
             <img src="..\images\Technothlon white.svg" class="img1" alt="">
         </div>
+        <br>
         <div class="flex direction font_size">
-            ROUND 3
+            Round 3
             <hr>
         </div>
         <div class="flex direction content">
@@ -33,16 +34,17 @@
             </div>
             <!-- Answer  -  B   -->
             <div>
-                <div class="margin">
-                    <label for="Answer">Answer</label>
-                    <input type="text" name="Answer">
-                </div>
-
                 <div>
-                    <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
-                    <button class="button button5"><a onclick="window.location.replace('index4.html')"> Hint</a> </button>
+                    <div >
+                        <label for="Answer">Answer</label>
+                        <input type="text" name="Answer">
+                    </div>
+    
+                    <div >
+                        <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    </div>
                 </div>
-            </div>
+               
         </div>
     </div>
     <style>
