--- a/chub/frontent/html/Q1.html
+++ b/chub/frontent/html/Q1.html
@@ -19,8 +19,10 @@
             <!-- TECHNOTHLON 2K22 -->
             <img src="..\images\Technothlon white.svg" class="img1" alt="">
         </div>
+        <br> 
+        
         <div class="flex direction font_size">
-            ROUND 1
+            Round 1
             <hr>
         </div>
         <div class="flex direction content">
@@ -35,16 +37,16 @@
 
             <!--  Answer  -   3    -->
             <div>
-                <div class="margin">
+                <div >
                     <label for="Answer">Answer</label>
                     <input type="text" name="Answer">
                 </div>
 
-                <div>
+                <div >
                     <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
-                    <button class="button button5"><a onclick="window.location.replace('index4.html')"> Hint</a> </button>
                 </div>
             </div>
+           
         </div>
     </div>
     <style>
