--- a/chub/frontent/html/Q10.html
+++ b/chub/frontent/html/Q10.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECHNOTHLON</title>
-    <link rel="stylesheet" href="..\css\style3.css">
+    <link rel="stylesheet" href="..\css\style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="http://fonts.cdnfonts.com/css/avenir-lt-std" rel="stylesheet">
@@ -17,31 +17,39 @@
     <div class="flex direction">
         <div class="size flex ">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="..\images\Technothlon white.svg" class="img1" alt="">
+            <img src="..\images\Technothlon white.svg" alt="">
         </div>
         <div class="flex direction font_size">
-            ROUND 1
+            Round 10
             <hr>
         </div>
-        <div class="flex direction content">
-            <div class="flex direction">
 
-                <div class="size3  " style="font-size: xxx-large">
-                    A snail is trying to climb a wall 40 ft tall. It climbs 4ft every hour and drops down 2 ft in the same hour. How much time will it take to climb up the wall for the snail. 
-                </div>
-            </div>
-            <div>
-                <div class="margin">
-                    <label for="Answer">Answer</label>
-                    <input type="text" name="Answer">
-                </div>
 
-                <div>
-                    <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
-                    <button class="button button5"><a onclick="window.location.replace('index4.html')"> Hint</a> </button>
-                </div>
-            </div>
+        <div class="size3 ">
+            <p style="color: rgba(247, 234, 205, 0.91);">
+                A snail is trying to climb a wall 40 ft tall. It climbs 4ft every hour and drops down 2 ft in the same hour. How much time will it take to climb up the wall for the snail.
+            <p>
+
+                <br>
+                <br>
+                The Artemis program is a robotic and human Moon exploration program led by the United States space agency, NASA, and involving three other partner agencies: European Space Agency (ESA), Japan Aerospace Exploration Agency (JAXA), and Canadian Space Agency (CSA).            </p>
+                <p>
+                On 16 April 2021, NASA contracted SpaceX to develop, manufacture, and fly two lunar landing flights with the Starship HLS lunar lander. Blue Origin and Dynetics protested the award to the GAO on 26 April. After the GAO rejected the protests, Blue Origin sued NASA over the award, and NASA agreed to stop work on the contract until 1 November 2021 as the lawsuit proceeded. The judge dismissed the suit on 4 November 2021 and NASA resumed work with SpaceX.
+            </p>
+
+            <p>
+                On 25 September 2021, NASA released its first digital, interactive graphic novel in celebration of National Comic Book Day. "First Woman: NASA's Promise for Humanity" is the fictional story of Callie Rodriguez, the first woman to explore the Moon.            </p>
+            <p>
+                In addition to the initial SpaceX contract, NASA awarded two rounds of separate contracts in May 2019 and September 2021, on aspects of the HLS to encourage alternative designs, separately from the initial HLS development effort. It announced in March 2022 that it was developing new sustainability rules and pursuing both a Starship HLS upgrade (an option under the initial SpaceX contract) and new competing alternative designs. These came after criticism from members of Congress over lack of redundancy and competition, and led NASA to ask for additional support.
+
+            </p>
+          
+
+
+            <!-- Answer    -   19    -->
         </div>
+
+        
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
