--- a/chub/frontent/html/Q4.html
+++ b/chub/frontent/html/Q4.html
@@ -31,8 +31,8 @@
 
 You have to start from the top-left corner cell (1,1) and reach at the bottom-right corner cell (5,5). From a cell (i,j), you can only move either one cell down or right i.e., to cell (i+1,j) or cell (i,j+1) and you can not move outside the magic grid. You have to find the minimum number of strength points required at the starting cell with which you will be able to reach the destination cell. 
                 <br>
-             <br>  0    -2   -3    1    2 <br> -1     4    0   -2    0 <br>1    -2   -3    0   -2 <br>4    -1    2   -1    1 <br.1    -1   -2    3    0 
-            </p>
+            <center><br>  0    -2   -3    1    2 <br> -1     4    0   -2    0 <br>1    -2   -3    0   -2 <br>4    -1    2   -1    1 <br>.1    -1   -2    3    0 
+            </center>   </p>
             <br>
             <br>
             <br>
@@ -43,7 +43,7 @@ You have to start from the top-left corner cell (1,1) and reach at the bottom-ri
                 pi=3.1415926535897932384626433...
             </p>
 
-            <!--   Answer -   2    -->
+            <!--   Answer -   2-->
         </div>
 
       
