--- a/chub/frontent/html/20.html
+++ b/chub/frontent/html/20.html
@@ -1,3 +1,7 @@
+
+  
+
+</html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECHNOTHLON</title>
-    <link rel="stylesheet" href="..\css\style3.css">
+    <link rel="stylesheet" href="..\css\style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="http://fonts.cdnfonts.com/css/avenir-lt-std" rel="stylesheet">
@@ -17,39 +21,45 @@
     <div class="flex direction">
         <div class="size flex ">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="..\images\Technothlon white.svg" class="img1" alt="">
+            <img src="..\images\Technothlon white.svg" alt="">
         </div>
         <div class="flex direction font_size">
-            ROUND 1
+            Round 20
             <hr>
         </div>
-        <div class="flex direction content">
-            <div class="flex direction">
 
-                <div class="size3  ">
-                    You have 12 identical coins except one which is fake and slightly heavier or lighter. You have been
-                    given one beam balance to find out whether that coin is heavier or lighter than the other coins.
-                    What is the minimum number of times you need to use the beam balance in order to find the fake coin?
 
-                </div>
-            </div>
-            <div>
-                <div class="margin">
-                    <label for="Answer">Answer</label>
-                    <input type="text" name="Answer">
-                </div>
+        <div class="size3 ">
+            <p style="color: rgba(247, 234, 205, 0.91);">
+              You have 12 identical coins except one which is fake and slightly heavier or lighter. You have been
+                given one beam balance to find out whether that coin is heavier or lighter than the other coins.
+                What is the minimum number of times you need to use the beam balance in order to find the fake coin?
 
-                <div>
-                    <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
-                    <button class="button button5"><a onclick="window.location.replace('index4.html')"> Hint</a>
-                    </button>
-                </div>
-            </div>
+</p>
+                <br>
+                <br>
+            </p>
+
+            <p>
+                The James Webb Space Telescope (JWST) is a space telescope designed primarily to conduct infrared astronomy. As the largest optical telescope in space, its high infrared resolution and sensitivity allow it to view objects too early, distant, or faint for the Hubble Space Telescope. This is expected to enable a broad range of investigations across the fields of astronomy and cosmology, such as observation of the first stars and the formation of the first galaxies, and detailed atmospheric characterization of potentially habitable exoplanets 
+            </p>
+            <p>
+
+                JWST's primary mirror consists of 18 hexagonal mirror segments made of gold-plated beryllium, which combined create a 6.5-meter-diameter (21 ft) mirror, compared with Hubble's 2.4 m (7 ft 10 in). This gives JWST a light-collecting area of about 25 square meters, about six times that of Hubble. Unlike Hubble, which observes in the near ultraviolet and visible (0.1 to 0.8 μm), and near infrared (0.8–2.5 μm)spectra, JWST observes in a lower frequency range, from long-wavelength visible light (red) through mid-infrared (0.6–28.3 μm). The telescope must be kept extremely cold, below 50 K (−223 °C; −370 °F), such that the infrared light emitted by the telescope itself does not interfere with the collected light. It is deployed in a solar orbit near the Sun–Earth L2 Lagrange point, about 1.5 million kilometers (930,000 mi) from Earth, where its five-layer sunshield protects it from warming by the Sun, Earth, and Moon.
+
+
+            </p>
+          
+
+
+            <!-- Answer    -   3    -->
         </div>
+
+        
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
-    </style>
+        </style>
 </body>
 
 </html>
