ques changed by ronak

--- a/chub/frontent/html/Q19.html
+++ b/chub/frontent/html/Q19.html
@@ -31,14 +31,8 @@
            
 
                 <div class="size3  " style="color: rgba(247, 234, 205, 0.91);">
-                    An integer matrix of size (4 x 4) has been given. Find out the minimum cost to reach from the cell (1, 1) to (4, 4). 
-                    From a cell (i, j), you can move in three directions: 
-                    <ul>
-                        <li>((i + 1), j) which is, "down" </li>
-                        <li>(i, (j + 1)) which is, "to the right" </li>
-                        <li>((i+1), (j+1)) which is, "to the diagonal" </li>
-                    </ul>
-                    The cost of a path is defined as the sum of each cell's values through which the route passes. 
+                    There is a house with 16 rooms in it. Each room has a treasure chest in it which contains a number in it. As you pass by the room you have to drop specified number of gold coins in the treasure chest. Find out the minimum number of gold coins you need before entering the house to reach from the top left room to bottom right room. 
+                    From a room, you can move in three directions: downwards , rightward and diagnally to the right and downward direction. 
                     <center>
                         <div style="font-size:150%;">
                             1 7 9 2 <br>
