--- a/chub/frontent/html/Q4.html
+++ b/chub/frontent/html/Q4.html
@@ -27,9 +27,9 @@
 
         <div class="size3 ">
             <p style="color: rgba(247, 234, 205, 0.91);">
-                You are given a magic grid A with 5 rows and 5 columns. In the cells of the grid, you will either get magic juice, which increases your strength by |A[i][j]| points, or poison, which takes away |A[i][j]| strength points. If at any point of the journey, the strength points become less than or equal to zero, then you will die. Positive number represent magic juice and negative number represent poison. 
+                You are given a magic grid A with 5 rows and 5 columns. In the cells of the grid, you will either get magic juice, which increases your strength by the value of that cell, or poison, which takes away the strength points written in the cell. If at any point of the journey, the strength points become less than or equal to zero, then you will die. Positive number represent magic juice and negative number represent poison. 
 
-You have to start from the top-left corner cell (1,1) and reach at the bottom-right corner cell (5,5). From a cell (i,j), you can only move either one cell down or right i.e., to cell (i+1,j) or cell (i,j+1) and you can not move outside the magic grid. You have to find the minimum number of strength points required at the starting cell with which you will be able to reach the destination cell. 
+You have to start from the top-left corner cell and reach at the bottom-right corner cell. From a cell, you can only move either one cell down or right and you can not move outside the magic grid. You have to find the minimum number of strength points required at the starting cell with which you will be able to reach the destination cell. 
                 <br>
             <center><br>  0    -2   -3    1    2 <br> -1     4    0   -2    0 <br>1    -2   -3    0   -2 <br>4    -1    2   -1    1 <br>.1    -1   -2    3    0 
             </center>   </p>
